src/styles/global.css
@import 'custom-props.css';
@import 'reset.css';

@layer base {
  body {
    @apply bg-black text-grey-98 text-base;
  }

  #root,
  #__next {
    isolation: isolate;
  }

  h1 {
    @apply text-2xl;
  }

  h2 {
    @apply text-3xl;
  }

  h1,
  h2 {
    @apply max-w-[30ch];
  }

  p {
    @apply max-w-[50ch];
  }

  a {
    @apply text-current no-underline cursor-pointer;
  }

  svg {
    @apply w-[0.75em] h-[0.75em] text-current stroke-current;
  }

  [role='list'] {
    @apply mb-0 p-0;
  }

  :focus {
    outline: 5px solid rgb(var(--primary-1) / 1);
    outline-offset: 10px;
  }

  input,
  input::placeholder {
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  section + section {
    @apply mt-[var(--space-md)];
  }

  li a {
    @apply w-full inline-block;
  }

  .card-list li {
    --flow-space: min(2rem, 4vh);
  }

  .card__stats {
    --flow-space: var(--space-3xs);
  }

  .card__stats > p {
    @apply font-normal;
  }

  .card__details {
    --flow-space: 2rem;
  }
}

